# viewer5

./: LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
